<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:id="@+id/etlogin"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/Password"
        android:layout_below="@+id/etlogin"
        android:textSize="30sp"
        android:id="@+id/etpassword"
        android:autofillHints="no"
        android:inputType="numberPassword"
        tools:ignore="UnknownId" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetpassword"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/etpassword"
        android:layout_gravity="right"
        android:layout_marginEnd="25dp"
        android:id="@+id/tvfp"/>

    <Button
        android:id="@+id/btnok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvfp"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:text="@string/Ok"
        android:textSize="25sp" />

</RelativeLayout>